--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -16,7 +16,7 @@ ENV IN_CONTAINER=1
 ENV HOME=/root
 
 RUN apt update -y 
-RUN apt install -y build-essential autoconf automake libtool ccache
+RUN apt install -y build-essential autoconf automake libtool ccache device-tree-compiler
 RUN apt install -y emacs-nox nano vim sudo curl wget git \
     unzip htop tmux screen bash-completion lsof fish tmux bash \
     iproute2 net-tools dnsutils iputils-ping traceroute socat tcpdump nmap \
@@ -25,6 +25,17 @@ RUN apt install -y emacs-nox nano vim sudo curl wget git \
 RUN apt install -y usbutils udev libusb-1.0-0-dev coreutils expect
 
 RUN ln -s /usr/bin/python3 /usr/bin/python || true
+
+# build uboot
+RUN apt-get install -y bc bison build-essential coccinelle \
+  device-tree-compiler dfu-util efitools flex gdisk graphviz imagemagick \
+  liblz4-tool libgnutls28-dev libguestfs-tools libncurses-dev \
+  libpython3-dev libsdl2-dev libssl-dev lz4 lzma lzma-alone openssl \
+  pkg-config python3 python3-asteval python3-coverage python3-filelock \
+  python3-pkg-resources python3-pycryptodome python3-pyelftools \
+  python3-pytest python3-pytest-xdist python3-sphinxcontrib.apidoc \
+  python3-sphinx-rtd-theme python3-subunit python3-testtools \
+  python3-virtualenv swig uuid-dev
 
 # Install Toolchain
 COPY --from=toolchain /build/ /build/
