--- a/docker/Makefile
+++ b/docker/Makefile
@@ -3,33 +3,47 @@
 # we use same makefile in root and ./docker
 DOCKER_DIR := $(dir $(realpath $(firstword $(MAKEFILE_LIST))))
 
-DOCKER_COMPOSE = docker compose -f $(DOCKER_DIR)/docker-compose.yml
-SERVICE = opencca-build
+DOCKER = docker
+DOCKER_COMPOSE = $(DOCKER) compose -f $(DOCKER_DIR)/docker-compose.yml
+
 SRC_DIR = /opencca
 SHELL_HISTORY = $(DOCKER_DIR)/.bash_history $(DOCKER_DIR)/.fish_history
 CACHE_DIR = $(DOCKER_DIR)/.cache
 SHELL := /bin/bash
 
+SERVICE_URL = ghcr.io/opencca/opencca-build:latest
+SERVICE = opencca-build
+
 .PHONY: help
 help:
 	@echo "Usage: make [target]"
 	@echo "Targets:"
-	@echo "  build         - Build the Docker image"
+	@echo "  build         - Build the Docker image locally"
+	@echo "  pull          - Pull a prebuilt image"
 	@echo "  start         - Start the interactive development container"
 	@echo "  enter         - Enter the running container"
 	@echo "  run CMD='...' - Run a command inside the container"
 	@echo "  stop          - Stop the container"
 	@echo "  clean         - Remove the container and unused images"
 
-.PHONY: build
-build:
+
+.PHONY: setup
+setup:
 	touch $(SHELL_HISTORY)
 	mkdir -p $(CACHE_DIR)
-	$(DOCKER_COMPOSE) build
+
+.PHONY: pull
+pull: setup
+	$(DOCKER) pull $(SERVICE_URL)
+
+.PHONY: build
+build: setup
+	-@docker image rm $(SERVICE_URL) &> /dev/null
+	$(DOCKER_COMPOSE) build $(SERVICE)
 
 .PHONY: start
-start:
-	$(DOCKER_COMPOSE) up -d
+start: setup
+	$(DOCKER_COMPOSE) up -d $(SERVICE)
 
 .PHONY: enter
 enter:
@@ -41,9 +55,9 @@ run:
 
 .PHONY: stop
 stop:
-	$(DOCKER_COMPOSE) stop
+	-$(DOCKER_COMPOSE) stop $(SERVICE)
 
 .PHONY: clean
 clean:
-	docker rm -f $(SERVICE) || true
-	docker volume rm $$(docker volume ls -qf dangling=true) || true
+	docker rm -f $(SERVICE) $(SERVICE_URL) || true
+	docker volume rm $$(docker volume ls -qf dangling=true) &> /dev/null || true
