--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build:
       context: ../
       dockerfile: docker/Dockerfile
-    image: ghcr.io/opencca/opencca-build:latest
+    image: opencca-build
     container_name: opencca-build
     hostname: opencca-build
     privileged: true
