opencca: fix workflow release

--- a/.github/workflows/release-docker-container.yaml
+++ b/.github/workflows/release-docker-container.yaml
@@ -37,7 +37,7 @@ jobs:
         run: echo "::set-output name=date::$(date -u +%Y-%m-%dT%H:%M:%SZ)"
 
       - name: Build Docker image using Makefile
-        run: make release
+        run: make -f docker/Makefile release
 
       - name: Post build cleanup
         run: docker system prune -f
