--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,6 @@ on:
 
 env:
   IMAGE_NAME: opencca-docker-demo
-  TITLE: OpenCCA Docker Demo
 
 jobs:
   build-and-push:
@@ -21,10 +20,12 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v4
 
-      - name: Read version from file
-        id: version
-        run: echo "version=$(cat VERSION)" >> $GITHUB_OUTPUT
-
+      - name: Build flags
+        id: flags
+        run: |
+          echo "date=$(date +"%Y-%m-%dT%H:%M:%SZ")" >> "$GITHUB_OUTPUT"
+          echo "short_sha=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
+    
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -35,23 +36,17 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Save build date
-        id: date
-        run: echo "date=$(date -u +'%Y-%m-%dT%H:%M:%SZ')" >> $GITHUB_OUTPUT
-
       - name: Build & Push Docker Image
         uses: docker/build-push-action@v5
         with:
           context: .
           push: true
+          platforms: linux/amd64
           build-args: |
-            VERSION=${{ steps.version.outputs.version }}
-            BUILD_DATE=${{ steps.date.outputs.date }}
+            BUILD_DATE=${{ steps.flags.outputs.date }}
+            BUILD_REF=${{ github.sha }}
+            BUILD_VERSION=${{ steps.flags.outputs.short_sha }}
+          
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
-          labels: |
-            org.opencontainers.image.title=${{ env.TITLE }}
-            org.opencontainers.image.version=${{ steps.version.outputs.version }}
-            org.opencontainers.image.created=${{ steps.date.outputs.date }}
-            org.opencontainers.image.source=https://github.com/${{ github.repository }}
-            org.opencontainers.image.revision=${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ steps.flags.outputs.short_sha }}
