--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,6 +4,10 @@ on:
   push:
     branches: [main]
   workflow_dispatch:
+    inputs:
+      version:
+        description: "Optional: Specify a version tag (e.g. v1.0.0)"
+        required: false
 
 env:
   IMAGE_NAME: opencca-docker-demo
@@ -25,7 +29,16 @@ jobs:
         run: |
           echo "date=$(date +"%Y-%m-%dT%H:%M:%SZ")" >> "$GITHUB_OUTPUT"
           echo "short_sha=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
-    
+
+      - name: Resolve build version
+        id: resolve_version
+        run: |
+          if [ -n "${{ github.event.inputs.version }}" ]; then
+            echo "build_version=${{ github.event.inputs.version }}" >> $GITHUB_OUTPUT
+          else
+            echo "build_version=${{ steps.flags.outputs.short_sha }}" >> $GITHUB_OUTPUT
+          fi
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -45,11 +58,11 @@ jobs:
           build-args: |
             BUILD_DATE=${{ steps.flags.outputs.date }}
             BUILD_REF=${{ github.sha }}
-            BUILD_VERSION=${{ steps.flags.outputs.short_sha }}
+            BUILD_VERSION=${{ steps.resolve_version.outputs.build_version }}
           
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
-            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ steps.flags.outputs.short_sha }}
+            aghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ steps.resolve_version.outputs.build_version }}
           provenance: false # Disable provenance to avoid unknown/unknown
           sbom: false       # Disable sbom to avoid unknown/unknown
           outputs: type=image,name=target
