--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: "Optional: Specify a version tag (e.g. v1.0.0)"
+        description: "e.g. v1.0.0"
         required: false
 
 env:
@@ -62,7 +62,7 @@ jobs:
           
           tags: |
             ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:latest
-            aghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ steps.resolve_version.outputs.build_version }}
+            ghcr.io/${{ github.repository_owner }}/${{ env.IMAGE_NAME }}:${{ steps.resolve_version.outputs.build_version }}
           provenance: false # Disable provenance to avoid unknown/unknown
           sbom: false       # Disable sbom to avoid unknown/unknown
           outputs: type=image,name=target
