--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,5 +1,11 @@
 #!/usr/bin/make -f
 
+#
+# Opencca Build Entrypoint
+# TLDR; make pull && make start && make enter
+# requires make and docker preinstalled
+#
+
 DOCKER_DIR := $(dir $(realpath $(firstword $(MAKEFILE_LIST))))
 
 DOCKER = docker
@@ -8,12 +14,25 @@ DOCKER_COMPOSE = $(DOCKER) compose -f $(DOCKER_DIR)/docker-compose.yml
 SRC_DIR = /opencca
 SHELL_HISTORY = $(DOCKER_DIR)/.bash_history $(DOCKER_DIR)/.fish_history
 CACHE_DIR = $(DOCKER_DIR)/.cache
-SHELL := /bin/bash
+SHELL = /bin/bash
 
-VERSION := latest
-SERVICE_URL := ghcr.io/opencca/opencca-build
+#
+# Naming conventions
+# For now we tag the runner with :latest and the 7-letter sha
+# We always pull the :latest build, overwrite if needed
+#
+VERSION_PULL = latest
+VERSION_PUSH = latest
 
+# XXX: These names must match in the compose file
+SERVICE_URL = ghcr.io/opencca/opencca-build
 SERVICE = opencca-build
+
+BUILD_DATE ?= $(shell date -u +"%Y-%m-%dT%H:%M:%SZ")
+BUILD_REF ?= $(shell git rev-parse HEAD)
+BUILD_VERSION ?= $(shell git rev-parse --short HEAD)
+
+CACHE ?=0
 
 .PHONY: help
 help:
@@ -34,12 +53,27 @@ setup:
 
 .PHONY: pull
 pull: setup
-	$(DOCKER) pull $(SERVICE_URL):$(VERSION)
+	$(DOCKER) pull $(SERVICE_URL):$(VERSION_PULL)
 
 .PHONY: build
 build: setup
-	-@docker image rm $(SERVICE_URL) &> /dev/null
-	$(DOCKER_COMPOSE) build $(SERVICE)
+ifeq ($(CACHE),0)
+	-@$(DOCKER) image rm $(SERVICE_URL):latest &> /dev/null || true # XXX: Remove explicitly
+	-@$(DOCKER) image rm $(SERVICE_URL):$(VERSION_PUSH) &> /dev/null || true
+	-@$(DOCKER) image rm $(SERVICE_URL):$(BUILD_VERSION) &> /dev/null || true
+else
+	@echo "Caching enabled. skipping building from scratch"
+endif
+
+	$(DOCKER) buildx build \
+		--file $(DOCKER_DIR)/Dockerfile \
+		--tag $(SERVICE_URL):$(VERSION_PUSH) \
+		--tag $(SERVICE_URL):$(BUILD_VERSION) \
+		--build-arg BUILD_DATE="$(BUILD_DATE)" \
+		--build-arg BUILD_REF="$(BUILD_REF)" \
+		--build-arg BUILD_VERSION="$(BUILD_VERSION)" \
+		--load  \
+		$(DOCKER_DIR)/..
 
 .PHONY: start
 start: setup
@@ -64,18 +98,11 @@ clean:
 	$(DOCKER) volume rm $$(docker volume ls -qf dangling=true) &> /dev/null || true
 	[[ $(SYSTEM) == 1 ]] && $(DOCKER) system prune -f || true
 
-# For CI
 .PHONY: release
-release: RELEASE_BUILD_DATE=$(shell date -u +%Y-%m-%dT%H:%M:%SZ)
-release: RELEASE_VCS_REF=$(shell git rev-parse --short HEAD)
-release: RELEASE_VERSION=$(shell git describe --tags --always )
+# XXX: For use in CI server
 release:
-	IMAGE_TAG=latest \
-	RELEASE_BUILD_DATE=$(RELEASE_BUILD_DATE) \
-	RELEASE_VCS_REF=$(RELEASE_VCS_REF) \
-	RELEASE_VERSION=$(RELEASE_VERSION) \
-	$(DOCKER_COMPOSE) build $(SERVICE)
+	@echo "Using SERVICE_URL: $(SERVICE_URL)"
+	@echo "Using BUILD_VERSION: $(BUILD_VERSION)"
 
-	$(DOCKER) tag $(SERVICE_URL):latest $(SERVICE_URL):$(RELEASE_VERSION)
-	$(DOCKER) push $(SERVICE_URL):$(RELEASE_VERSION)
-	$(DOCKER) push $(SERVICE_URL):latest
+	$(DOCKER) push $(SERVICE_URL):$(BUILD_VERSION)
+	$(DOCKER) push $(SERVICE_URL):$(VERSION_PUSH)
