--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -15,6 +15,7 @@ services:
     network_mode: "host"
     extra_hosts:
       - "opencca-build:127.0.0.1"
+    user: "${DOCKER_UID}:${DOCKER_GID}" # XXX: Set in Makefile
     volumes:
       - ../../:/opencca # project root
       - ~/.ccache:/root/.ccache  # Mount ccache directory
